# diff-gaussian-rasterization

./: .gitignore  CMakeLists.txt  README.md  compile_and_run_test.sh  ext.cpp  fuse_adam.cu  fuse_adam.h  rasterization_backward_tests.py  rasterization_tests.py  rasterize_points.cu  rasterize_points.h  setup.py
barenet2-adam/: CMakeLists.txt  test_adam.py
barenet2-adam/src/: test.cu  test_adam.cu  train_mlp.cu
barenet2-adam/src/modules/: adam.cuh  linear.cuh  mlp.cuh  param.cuh  sgd.cuh
barenet2-adam/src/ops/: op_adam.cuh  op_cross_entropy.cuh  op_elemwise.cuh  op_mm.cuh  op_reduction.cuh
barenet2-adam/src/utils/: assert.cuh  dataset_mnist.hh  tensor.cuh
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  fuse_adam.cuh  my_timer.cu  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h  timers.cu
diff_gaussian_rasterization/: __init__.py  get_ncu_metrics.py  ncu_test_fuse_adam.sh  test_fuse_adam.py
tests/: rasterization_preprocess_test.py
